--- a/Player/Player/Player.csproj
+++ b/Player/Player/Player.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Update="Tittle.txt">
+    <None Update="Title.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
